--- a/login/Assistant/Assistant/Views/Home/PropositionOfProducts.cshtml
+++ b/login/Assistant/Assistant/Views/Home/PropositionOfProducts.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="row">
-    <div class="col-sm-8">
+    <div class="col-8">
         <div class="lead">
             <h2>Lista propozycji</h2>
         </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-3">
         <div class="spinner-border text-primary" role="status" id="spinnerAddingProd" style="padding:15px;margin-left:5px">
             <span class="sr-only">Wczytywanie...</span>
         </div>
@@ -88,7 +88,7 @@
                     <button type="submit" id="AddProductAssociation" class="btn btn-primary">Dodaj</button>
                 </div>
                 <div class="col-1">
-                    <button type="submit" id="AddProductAssociation" class="btn btn-primary">
+                    <button type="submit" id="RefreshProductAssociation" class="btn btn-primary">
                         <i class="fa fa-refresh"></i>
                     </button>
                 </div>
@@ -96,7 +96,6 @@
 
         }
     }
-    @ViewData["DynamicTest"]
     <div class="row mt-3"></div>
 
 
